--- a/templates/top3.html
+++ b/templates/top3.html
@@ -16,13 +16,16 @@
     <div class="todo">
       {%for i in range(0, lenO)%}
       <div class="card">
+		
           <!--<div style="background: url({{a[i]}})" class="card-image"></div>-->
           <div class="card-image" style="background: url({{a[i]}});  grid-area: image;border-top-left-radius: 15px; border-top-right-radius: 15px;background-size: cover;"></div>
         
           <div class="card-text">
             <span class="date">{{ country }}</span>
-            <h2>{{ opciones[i] }}</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+			
+            <h2 name="uniName" id="uniName">{{ opciones[i] }}</h2>
+			
+            <p>{{ types[i] }}</p>
           </div>
           <div class="card-stats">
             <div class="stat">
@@ -33,15 +36,96 @@
               <div class="value">{{ contenedores[i] }}</div>
               <div class="type">Probabilidad</div>
             </div>
-            <div class="stat">
-              <div class="value">2</div>
-              <div class="type">Cupos Disponibles</div>
+            <div class="stat-Like">
+			 <form action="/tops" method="POST">
+             <button  type="submit" name="save_btn" value = "{{opciones[i]}}" class="btn btn-success mt-4" >Me Gusta</button>
+			</form>
             </div>
+			
           </div>
+		 
         </div>
       {%endfor%}
     </div>
-    
+
+    <div class="container mx-auto">
+      <h2 class="text-center"><b>Recomendaciones</b></h2>
+      <!--<h4 class="text-center">La precisión del modelo</h4>-->
+        <!--<p class="text-center">{{ average }}</p>-->
+    </div>
+    <div class="todo">
+      {%for i in range(0, lenO)%}
+      <div class="card">
+	  
+          <!--<div style="background: url({{a[i]}})" class="card-image"></div>-->
+          <div class="card-image" style="background: url({{a[i]}});  grid-area: image;border-top-left-radius: 15px; border-top-right-radius: 15px;background-size: cover;"></div>
+        <form action="/tops" method="POST">
+          <div class="card-text">
+            <span class="date">{{ country }}</span>
+            <h2>{{ recomendacionColl[i] }}</h2>
+            <p>{{relation[i]}}</p>
+          </div>
+		  </form>
+          <div class="card-stats">
+            <div class="stat">
+              <div class="value"><a href="{{ linkRecom[i] }}">Más</a></div>
+              <!--<div class="type">read</div>-->
+            </div>
+            <div class="stat b">
+              <div class="value">{{ por[i] }}</div>
+              <div class="type">Probabilidad</div>
+            </div>
+            <div class="stat-Like">
+				<form action="/tops" method="POST">
+				<button  type="submit" name="save_btn" value = "{{recomendacionColl[i]}}" class="btn btn-success mt-4" >Me Gusta</button>
+				</form>
+            </div>
+			
+          </div>
+		 
+        </div>
+      {%endfor%}
+    </div>
+	
+	<div class="container mx-auto">
+      <h2 class="text-center"><b>Guardar</b></h2>
+      <!--<h4 class="text-center">La precisión del modelo</h4>-->
+        <!--<p class="text-center">{{ average }}</p>-->
+    </div>
+    <div class="todo">
+      {%for i in range(0, lenG)%}
+      <div class="card">
+	  
+          <!--<div style="background: url({{a[i]}})" class="card-image"></div>-->
+          <div class="card-image" style="background: url({{a[i]}});  grid-area: image;border-top-left-radius: 15px; border-top-right-radius: 15px;background-size: cover;"></div>
+        <form action="/tops" method="POST">
+          <div class="card-text">
+            <span class="date">{{ country }}</span>
+            <h2>{{ guardaN[i] }}</h2>
+            <p>{{ guardaR[i]}}</p>
+          </div>
+		  </form>
+          <div class="card-stats">
+            <div class="stat">
+              <div class="value"><a href="{{ linkRecom[i] }}">Más</a></div>
+              <!--<div class="type">read</div>-->
+            </div>
+            <div class="stat b">
+              <div class="value">{{ guardaP[i] }}</div>
+              <div class="type">Probabilidad</div>
+            </div>
+            <div class="stat-Like">
+				
+				<button  type="submit" name="save_btn" value = "{{recomendacionColl[i]}}" class="btn btn-success mt-4" >No Me Gusta</button>
+				
+            </div>
+			
+          </div>
+		 
+        </div>
+      {%endfor%}
+    </div>
+	
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
