--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -9,12 +9,24 @@
     background-color:#fff;
     overflow: hidden;
   }
+
+.todo2 {
+	width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    font-family: Montserrat;
+    margin-left: 155px;
+	
+    background-color:white;
+    overflow: hidden;
+  }
 .border {
     border: 1px solid rgba(255, 0, 0, 0);
 }
   .card {
     display: grid;
-    grid-template-columns: 300px;
+    grid-template-columns: 280px;
     grid-template-rows: 210px 210px 80px;
     grid-template-areas: "image" "text" "stats";
     border-radius: 18px;
@@ -23,9 +35,13 @@
     text-align: center;
     transition: 0.5s ease;
     cursor: pointer;
-    margin:30px;
+    margin:20px;
   }
+.carousel-control-next{
   
+  color: black;
+}
+
   .card-image {
     grid-area: image;
     /*background: url("../img/u1.jpg");*/
@@ -33,7 +49,11 @@
     border-top-right-radius: 15px;
     background-size: cover;
   }
+  .carousel-control-prev {
+  color: black;
   
+}
+
   
   .card-text {
     grid-area: text;
@@ -89,4 +109,5 @@
     transform: scale(1.15);
     box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
   }
+
   
