--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
     <title>Sistema Recomendación Intercambios</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+	<link rel="stylesheet" href="{{url_for('static',filename='css/style2.css')}}">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
+  
 
 </head>
 <body>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <!--<div class="image-grid">
         <div class="row">
@@ -107,14 +121,15 @@
                             <input type="number" id="promedio" name="promedio" required minlength="3" maxlength="5" size="10">
                         </div>
                     </div>
-
+						
                     <h5 style="font-size:17px" class="mb-4 mt-4">¿Qué idiomas manejas?</h5>
-                    <label><input type="checkbox" id="cbox1" name="esItaliano" value="on">Italiano</label><br>
-                    <label><input type="checkbox" id="cbox1" name="esIngles" value="on">Ingles</label><br>
-                    <label><input type="checkbox" id="cbox1" name="esFrances" value="on">Frances</label><br>
-                    <label><input type="checkbox" id="cbox1" name="esPortugues" value="on">Portugues</label><br>
-                    <label><input type="checkbox" id="cbox1" name="esAleman" value="on">Aleman</label><br>
+					<select name = "lenguage[]" class="form-control selectpicker" data-live-search="true" multiple>
+                     {%for i in range(0, lenL)%}
+                            <option value = "{{lenguajess[i]}}">{{lenguajess[i]}}</option>
+                        {%endfor%}
+					</select>
                     <button  value="submit" name="continue-btn"class="btn btn-success mt-4">Continuar</button>
+					
                 </form>
 
                     
@@ -126,14 +141,17 @@
             </div>
             
         </div>
-        
+		
+		
+		
         <div class="container-fluid mt-4 ms-4">
             <canvas id="bar-chart" width="1300" height="450"></canvas>
         </div>
         <div id = "loader">
 			<img src = "../static/Loading_icon.gif" alt = "">
 		</div>
-    
+    <script>
+	</script>
         <script>
             new Chart(document.getElementById("bar-chart"), {
     type: 'bar',
