--- a/templates/top3.html
+++ b/templates/top3.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static',filename='css/style2.css')}}">
+	 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" href="{{url_for('static',filename='css/style2.css')}}">
+	 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Recomendaciones</title>
   </head>
   <body>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
     <div class="container mx-auto">
       <h2 class="text-center"><b>Recomendaciones</b></h2>
       <!--<h4 class="text-center">La precisión del modelo</h4>-->
@@ -53,39 +63,77 @@
       <!--<h4 class="text-center">La precisión del modelo</h4>-->
         <!--<p class="text-center">{{ average }}</p>-->
     </div>
-    <div class="todo">
-      {%for i in range(0, lenO)%}
-      <div class="card">
+    
+	<div class="container" style="margin-bottom:100px">
+            
+            <div id="carouselExampleControls" class="carousel slide" data-interval="false">
+			  <div class="carousel-inner">
+				{%for j in range(0, 2)%}
+					
+
+				<div class="carousel-item {% if loop.index == 1 %} active {% endif %}" id="slide{{ loop.index }}">
+				<div class="todo2">
+						{%for i in range(0, 3)%}
+				
+					 <div class="card">
 	  
-          <!--<div style="background: url({{a[i]}})" class="card-image"></div>-->
-          <div class="card-image" style="background: url({{a[i]}});  grid-area: image;border-top-left-radius: 15px; border-top-right-radius: 15px;background-size: cover;"></div>
+         
+          <div class="card-image" style="background: url({{a[i+valoresR[j]]}});  grid-area: image;border-top-left-radius: 15px; border-top-right-radius: 15px;background-size: cover;"></div>
         <form action="/tops" method="POST">
           <div class="card-text">
-            <span class="date">{{ country }}</span>
-            <h2>{{ recomendacionColl[i] }}</h2>
-            <p>{{relation[i]}}</p>
+            <span class="date">country</span>
+            <h2>{{ recomendacionColl[i+valoresR[j]] }}</h2>
+            <p>{{relation[i+valoresR[j]]}}</p>
           </div>
 		  </form>
           <div class="card-stats">
-            <div class="stat">
+           
+             <div class="stat">
               <div class="value"><a href="{{ linkRecom[i] }}">Más</a></div>
               <!--<div class="type">read</div>-->
             </div>
+              <!--<div class="type">read</div>-->
+            
             <div class="stat b">
-              <div class="value">{{ por[i] }}</div>
+              <div class="value">{{ por[i+valoresR[j]] }}</div>
               <div class="type">Probabilidad</div>
             </div>
             <div class="stat-Like">
 				<form action="/tops" method="POST">
-				<button  type="submit" name="save_btn" value = "{{recomendacionColl[i]}}" class="btn btn-success mt-4" >Me Gusta</button>
+				<button  type="submit" name="save_btn" value = "{{recomendacionColl[i+valoresR[j]]}}" class="btn btn-success mt-4" >Me Gusta</button>
 				</form>
             </div>
 			
           </div>
 		 
+        </div> 
+		{% endfor %} 
+					</div>
+					
+					
+					
+					
+					
+					
+			   </div>
+
+			
+				{% endfor %} 
+				  
+				</div>
+			
+			  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			  </a>
+			</div>
         </div>
-      {%endfor%}
-    </div>
+     
+  
 	
 	<div class="container mx-auto">
       <h2 class="text-center"><b>Guardar</b></h2>
@@ -93,6 +141,7 @@
         <!--<p class="text-center">{{ average }}</p>-->
     </div>
     <div class="todo">
+	
       {%for i in range(0, lenG)%}
       <div class="card">
 	  
